# keyoxide-cli-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: _build_linux_target.yml  _build_macos_target.yml  build.yml  release.yml
__tests__/aspe/.well-known/aspe/id/: TOICV3SYXNJP7E4P5AOK5DHW44
__tests__/data/: ALEXIS_LOWE_PUBLIC_KEY.asc  IETF_SAMPLE_PUBLIC_KEY_WITH_NOTATIONS.asc  TEST_DOIP_PUBLIC_KEY.asc
__tests__/expected_outputs/: alexis_lowe.json  asc_file.json  hkp.json  ietf_sample.json  test_doip.json  wkd.json
src/: main.rs
src/config/serviceProviderDefinitions/: devto.toml  discourse.toml  dns.toml  gitea.toml  github.toml  hackernews.toml  index.toml  liberapay.toml  lichess.toml  lobsters.toml  mastodon.toml  owncast.toml  pleroma.toml  reddit.toml  twitter.toml
src/libs/: aspe.rs  clap.rs  doip.rs  error.rs  mod.rs  openpgp.rs
src/libs/aspe/: jose.rs  mod.rs  profile.rs
